fix(table): cell content default to wrap
fix #562

--- a/style/table.scss
+++ b/style/table.scss
@@ -209,6 +209,7 @@ $table: map.merge(
 
   &__content {
     display: flex;
+    flex-flow: column wrap;
     align-items: inherit;
     justify-content: inherit;
     width: 100%;
